# auro-balancing-necleo

./: .gitignore  ARCHITECTURE.md  AUDIT.md  BENCH_LOG.md  HARDWARE_BRINGUP.md  HARDWARE_STATUS.md  MIGRATION_PLAN.md  PIN_ASSIGNMENTS.md  PORTING_NOTES.md  README.md  bench_test_log.md
docs/: hw_tune_01_plan.md
esp32_bridge/: esp32_bridge.ino  platformio.ini
esp32_bridge/include/: secrets.h.example
esp32_bridge/src/: main.cpp
firmware/: CMakeLists.txt  STM32F401RETX_FLASH.ld  stm32f4xx_hal_conf.h
firmware/Core/Inc/: FreeRTOSConfig.h  autotune.h  balance.h  comm_protocol.h  config.h  encoder.h  imu_mpu6050.h  main.h  motor_driver.h  odometry.h  pid.h  rgb_led.h  ros_topics.h  safety.h  telemetry.h
firmware/Core/Src/: autotune.c  balance.c  cmd_vel_sub.c  comm_protocol.c  encoder.c  freertos_app.c  freertos_hooks.c  imu_mpu6050.c  main.c  microros_allocators.c  microros_time.c  microros_transport.c  motor_driver.c  odometry.c  pid.c  rgb_led.c  ros_publishers.c  safety.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c  telemetry.c
firmware/cmake/: arm-gcc.cmake
firmware/micro_ros/include/control_msgs/action/: execute_motion_primitive_sequence.h  follow_joint_wrench_trajectory.h
firmware/micro_ros/include/control_msgs/action/detail/: execute_motion_primitive_sequence__functions.h  execute_motion_primitive_sequence__rosidl_typesupport_introspection_c.h  execute_motion_primitive_sequence__rosidl_typesupport_microxrcedds_c.h  execute_motion_primitive_sequence__struct.h  execute_motion_primitive_sequence__type_support.h  follow_joint_trajectory__struct.h  follow_joint_wrench_trajectory__functions.h  follow_joint_wrench_trajectory__rosidl_typesupport_introspection_c.h  follow_joint_wrench_trajectory__rosidl_typesupport_microxrcedds_c.h  follow_joint_wrench_trajectory__struct.h  follow_joint_wrench_trajectory__type_support.h
firmware/micro_ros/include/control_msgs/msg/: battery_state_array.h  ca_nopen_state.h  ether_cat_state.h  float64_values.h  generic_hardware_state.h  hardware_device_diagnostics.h  hardware_device_status.h  hardware_diagnostics.h  hardware_status.h  joint_wrench_trajectory.h  joint_wrench_trajectory_point.h  keys.h  motion_argument.h  motion_primitive.h  motion_primitive_sequence.h  speed_scaling_factor.h  steering_controller_command.h  vda5050_safety_state.h  vda5050_state.h  wrench_framed.h
firmware/micro_ros/include/control_msgs/msg/detail/: battery_state_array__functions.h  battery_state_array__rosidl_typesupport_introspection_c.h  battery_state_array__rosidl_typesupport_microxrcedds_c.h  battery_state_array__struct.h  battery_state_array__type_support.h  ca_nopen_state__functions.h  ca_nopen_state__rosidl_typesupport_introspection_c.h  ca_nopen_state__rosidl_typesupport_microxrcedds_c.h  ca_nopen_state__struct.h  ca_nopen_state__type_support.h  dynamic_interface_values__functions.h  dynamic_interface_values__rosidl_typesupport_microxrcedds_c.h  dynamic_interface_values__struct.h  ether_cat_state__functions.h  ether_cat_state__rosidl_typesupport_introspection_c.h  ether_cat_state__rosidl_typesupport_microxrcedds_c.h  ether_cat_state__struct.h  ether_cat_state__type_support.h  float64_values__functions.h  float64_values__rosidl_typesupport_introspection_c.h  float64_values__rosidl_typesupport_microxrcedds_c.h  float64_values__struct.h  float64_values__type_support.h  generic_hardware_state__functions.h  generic_hardware_state__rosidl_typesupport_introspection_c.h  generic_hardware_state__rosidl_typesupport_microxrcedds_c.h  generic_hardware_state__struct.h  generic_hardware_state__type_support.h  hardware_device_diagnostics__functions.h  hardware_device_diagnostics__rosidl_typesupport_introspection_c.h  hardware_device_diagnostics__rosidl_typesupport_microxrcedds_c.h  hardware_device_diagnostics__struct.h  hardware_device_diagnostics__type_support.h  hardware_device_status__functions.h  hardware_device_status__rosidl_typesupport_introspection_c.h  hardware_device_status__rosidl_typesupport_microxrcedds_c.h  hardware_device_status__struct.h  hardware_device_status__type_support.h  hardware_diagnostics__functions.h  hardware_diagnostics__rosidl_typesupport_introspection_c.h  (+67 more)
firmware/micro_ros/include/control_msgs/srv/: set_odometry.h
firmware/micro_ros/include/control_msgs/srv/detail/: set_odometry__functions.h  set_odometry__rosidl_typesupport_introspection_c.h  set_odometry__rosidl_typesupport_microxrcedds_c.h  set_odometry__struct.h  set_odometry__type_support.h
firmware/micro_ros/include/geometry_msgs/msg/detail/: inertia__struct.h
firmware/micro_ros/include/nav_msgs/msg/: trajectory.h  trajectory_point.h
firmware/micro_ros/include/nav_msgs/msg/detail/: trajectory__functions.h  trajectory__rosidl_typesupport_introspection_c.h  trajectory__rosidl_typesupport_microxrcedds_c.h  trajectory__struct.h  trajectory_point__rosidl_typesupport_introspection_c.h  trajectory_point__struct.h  trajectory_point__type_support.h
firmware/micro_ros/include_jazzy/nav_msgs/msg/detail/: trajectory__type_support.h  trajectory_point__functions.h  trajectory_point__rosidl_typesupport_microxrcedds_c.h
reports/: hw_validation_20260411.html
ros2_ws/src/auro_balance/: package.xml  setup.cfg  setup.py
ros2_ws/src/auro_balance/auro_balance/: balance_node.py
ros2_ws/src/auro_balance/launch/: balance.launch.py
ros2_ws/src/auro_msgs/: CMakeLists.txt  package.xml
ros2_ws/src/auro_msgs/msg/: BalanceStatus.msg  PidGains.msg
scripts/: bench_monitor.py  pitch_monitor.py
sim/: params.py  simulator.py  tune.py
