<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>auro_balance</name>
  <version>0.1.0</version>
  <description>ROS2 balance controller and dashboard for the Auro self-balancing robot.</description>
  <maintainer email="robotics@localhost">robotics</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>diagnostic_msgs</depend>
  <depend>auro_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
